# MaxPatchHelper

./: .gitignore  LICENSE  README.md  architecture.html  assistant.py  code_review.html  implementation_plan.md  maxmsp_assistant_plan.html  pyproject.toml  requirements.txt
assistant/: classify.py  config.py  explain.py  generate.py  guided.py  object_reference.py  prompts.py  retrieve.py  server.py  validate.py
data/example_patches/m4l/: audio_effect_volume.json
data/example_patches/max/: sine_generator.json
scraper/: chunk.py  crawl.py  ingest.py  parse_inlets_outlets.py
tests/: test_generate_guided.py  test_server.py  test_validate.py
ui/: package-lock.json
ui/src/: App.css  App.jsx  index.css
ui/src/components/: DocExplorer.jsx  Explainer.jsx  Generator.jsx  GuidedBuilder.jsx
ui/src/services/: api.js
ui/src/shared/: CodeBlock.jsx  ConnectionBadge.jsx
ui/src/styles/: tokens.css
