[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maxpatchhelper"
version = "1.0.0"
description = "Max MSP / M4L AI assistant (Ollama + ChromaDB + FastAPI + React)"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
packages = ["assistant"]
